# gh-ghpm-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: docs.md
script/: build.sh
src/: main.rs
